--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -51,7 +51,7 @@
     </main>
     <footer>
         <hr>
-        <p class="text-center">copyright &copy; 2024. zzyzzy. all rights reserved.</p>
+        <p class="text-center">copyright &copy; 2024. snicuz. all rights reserved.</p>
     </footer>
 </div>
 </body>
