--- a/views/templates/member/login.html
+++ b/views/templates/member/login.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>세미프로젝트</title>
+    <link rel="stylesheet" href="/static/css/bs5/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/project.css">
     <style>
-        form { width: 350px; margin: 100px auto; }
-        form label { display: inline-block; width: 120px;
-            text-align: right; font-weight: bold; }
-        form div { margin: 5px 0 }
-        form input { padding: 5px }
-        button{ margin-left: 6px; padding: 5px }
+
     </style>
 </head>
 <body>
-<div id="wrap">
-    <header><h1>세미프로젝트 v1</h1></header>
-    <nav><ul>
-        <li><a href="">Home</a></li>
-        <li><a href="/member/join">회원가입</a></li>
-        <li><a href="/member/login">로그인</a></li>
-        <li><a href="/board/list">게시판</a></li>
-        <li><a href="/member/myinfo">회원정보</a></li>
+<div id="wrap" class="container">
+    <header class="py-3"><h1>세미프로젝트 v1</h1></header>
+    <nav><ul class="nav nav-fill">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/member/join">회원가입</a></li>
+        <li class="nav-item"><a class="nav-link" href="/member/login">로그인</a></li>
+        <li class="nav-item"><a class="nav-link" href="/board/list">게시판</a></li>
+        <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
     </ul>
         <hr>
     </nav>
     <main>
         <h2>로그인</h2>
-        <form name="loginfrm" method="post">
-            <div><label for="userid">아이디</label>
-                <input type="text" name="userid" id="userid" required></div>
+        <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
+            <form name="loginfrm" method="post" class="col-5">
+                <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
+                    <div class="col-7">
 
-            <div><label for="passwd">비밀번호</label>
-                <input type="text" name="passwd" id="passwd" required></div>
+                        <input type="text" name="userid" id="userid" required class="form-control"></div></div>
+                <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
+                    <div class="col-7">
 
-            <div><label></label><button type="button" id="loginbtn">로그인</button></div>
-
-        </form>
+                        <input type="text" name="passwd" id="passwd" required class="form-control"></div></div>
+                <div class="row my-2"><label class="col-form-label col-4 text-end"></label>
+                    <div class="col-7">
+                        <button type="submit" id="loginbtn" class="btn btn-danger">로그인</button></div></div>
+            </form>
+        </div>
     </main>
     <footer>
         <hr>
