--- a/views/templates/member/login.html
+++ b/views/templates/member/login.html
@@ -41,7 +41,7 @@
     </main>
     <footer>
         <hr>
-        <p>copyright &copy; 2024. snicuz. all rights reserved.</p>
+        <p class="text-center">copyright &copy; 2024. snicuz. all rights reserved.</p>
     </footer>
 </div>
 </body>
