--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -1,58 +1,37 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>세미프로젝트</title>
-    <link rel="stylesheet" href="/static/css/bs5/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/project.css">
-    <style>
-    </style>
-</head>
-<body>
-<div id="wrap" class="container">
-    <header class="py-3"><h1>세미프로젝트 v1</h1></header>
-    <nav><ul class="nav nav-fill">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/join">회원가입</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/login">로그인</a></li>
-        <li class="nav-item"><a class="nav-link" href="/board/list">게시판</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
-    </ul>
-        <hr>
-    </nav>
-    <main>
-        <h2>회원가입</h2>
-        <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
-            <form name="joinfrm" method="post" class="col-5">
-                <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
-                    <div class="col-7">
-                        <input type="text" name="userid" id="userid"
-                               minlength="6" maxlength="18" required class="form-control"></div></div>
-                <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
-                    <div class="col-7">
-                        <input type="text" name="passwd" id="passwd"
-                               minlength="6" maxlength="18" required class="form-control"></div></div>
-                <div class="row my-2"><label for="repasswd" class="col-form-label col-4 text-end">비밀번호 확인</label>
-                    <div class="col-7">
-                        <input type="text" name="repasswd" id="repasswd"
-                               minlength="6" maxlength="18" required class="form-control"></div></div>
-                <div class="row my-2"><label for="name" class="col-form-label col-4 text-end">이름</label>
-                    <div class="col-7">
-                        <input type="text" name="name" id="name" required class="form-control"></div></div>
-                <div class="row my-2"><label for="email" class="col-form-label col-4 text-end">이메일</label>
-                    <div class="col-7">
-                        <input type="email" name="email" id="email" required class="form-control"></div></div>
-                <div class="row my-2"><label class="col-4 text-end"></label>
-                    <div class="col-7">
-                        <button type="submit" id="joinbtn" class="btn btn-primary">입력완료</button>
-                        <button type="reset" id="rstbtn" class="btn btn-danger">다시입력</button></div></div>
-            </form>
-        </div>
-    </main>
-    <footer>
-        <hr>
-        <p class="text-center">copyright &copy; 2024. snicuz. all rights reserved.</p>
-    </footer>
-</div>
-</body>
-</html>
+{% extends 'include/base.html' %}
+
+{% block title %}
+세미프로젝트 - 회원가입
+{% endblock %}
+
+{% block main %}
+<main>
+    <h2>회원가입</h2>
+    <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
+        <form name="joinfrm" method="post" class="col-5">
+            <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
+                <div class="col-7">
+                    <input type="text" name="userid" id="userid"
+                           minlength="6" maxlength="18" required class="form-control"></div></div>
+            <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
+                <div class="col-7">
+                    <input type="text" name="passwd" id="passwd"
+                           minlength="6" maxlength="18" required class="form-control"></div></div>
+            <div class="row my-2"><label for="repasswd" class="col-form-label col-4 text-end">비밀번호 확인</label>
+                <div class="col-7">
+                    <input type="text" name="repasswd" id="repasswd"
+                           minlength="6" maxlength="18" required class="form-control"></div></div>
+            <div class="row my-2"><label for="name" class="col-form-label col-4 text-end">이름</label>
+                <div class="col-7">
+                    <input type="text" name="name" id="name" required class="form-control"></div></div>
+            <div class="row my-2"><label for="email" class="col-form-label col-4 text-end">이메일</label>
+                <div class="col-7">
+                    <input type="email" name="email" id="email" required class="form-control"></div></div>
+            <div class="row my-2"><label class="col-4 text-end"></label>
+                <div class="col-7">
+                    <button type="submit" id="joinbtn" class="btn btn-primary">입력완료</button>
+                    <button type="reset" id="rstbtn" class="btn btn-danger">다시입력</button></div></div>
+        </form>
+    </div>
+</main>
+{% endblock %}
