login - 템플릿 작성

--- a/views/templates/member/login.html
+++ b/views/templates/member/login.html
@@ -1,48 +1,24 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>세미프로젝트</title>
-    <link rel="stylesheet" href="/static/css/bs5/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/project.css">
-    <style>
+{% extends 'include/base.html' %}
 
-    </style>
-</head>
-<body>
-<div id="wrap" class="container">
-    <header class="py-3"><h1>세미프로젝트 v1</h1></header>
-    <nav><ul class="nav nav-fill">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/join">회원가입</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/login">로그인</a></li>
-        <li class="nav-item"><a class="nav-link" href="/board/list">게시판</a></li>
-        <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
-    </ul>
-        <hr>
-    </nav>
-    <main>
-        <h2>로그인</h2>
-        <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
-            <form name="loginfrm" method="post" class="col-5">
-                <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
-                    <div class="col-7">
+{% block title %}
+세미프로젝트 - 로그인
+{% endblock %}
 
-                        <input type="text" name="userid" id="userid" required class="form-control"></div></div>
-                <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
-                    <div class="col-7">
-
-                        <input type="text" name="passwd" id="passwd" required class="form-control"></div></div>
-                <div class="row my-2"><label class="col-form-label col-4 text-end"></label>
-                    <div class="col-7">
-                        <button type="submit" id="loginbtn" class="btn btn-danger">로그인</button></div></div>
-            </form>
-        </div>
-    </main>
-    <footer>
-        <hr>
-        <p class="text-center">copyright &copy; 2024. snicuz. all rights reserved.</p>
-    </footer>
-</div>
-</body>
-</html>
+{% block main %}
+<main>
+    <h2>로그인</h2>
+    <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
+        <form name="loginfrm" method="post" class="col-5">
+            <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
+                <div class="col-7">
+                    <input type="text" name="userid" id="userid" required class="form-control"></div></div>
+            <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
+                <div class="col-7">
+                    <input type="text" name="passwd" id="passwd" required class="form-control"></div></div>
+            <div class="row my-2"><label class="col-form-label col-4 text-end"></label>
+                <div class="col-7">
+                    <button type="submit" id="loginbtn" class="btn btn-danger">로그인</button></div></div>
+        </form>
+    </div>
+</main>
+{% endblock %}
