회원가입 처리시 발생할 수 있는 오류에 대한 예외처리 코드 추가

--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -38,7 +38,7 @@
 
 {% block script %}
 <script>
-    // 회원정보를 입력 받아 폼 유효성 검사 수행 후
+    // 회원정보를 입력받아 폼 유효성 검사 수행 후
     // 입력한 정보를 json 형식으로 생성한 후 서버로 전송
     let joinbtn = document.querySelector('#joinbtn');
     let joinfrm = document.joinfrm;
@@ -48,26 +48,29 @@
         const formData = new FormData(joinfrm);
         console.log(formData);
 
-
-        // 서버로 보내기 위해 폼데이터를 JSON객체로 전환
+        // 서버로 보내기 위해 폼데이터를 JSON객체로 변환
         let jsondata = {};
         formData.forEach((val, key) => {
-           jsondata[key] = val;
+            jsondata[key] = val;
         });
 
         console.log(jsondata);
 
         // ajax를 이용해서 서버로 json 데이터 전송하고, 결과 받음
         fetch('/member/join', {
-            method: 'POST',     // 데이터 전송 방식
-            headers: {          // 전송할 데이터 종류
+            method: 'POST',   // 데이터 전송방식
+            headers: {        // 전송할 데이터 종류
                 'Accept': 'application/json',
-                'Content-Type' : 'application/json'
+                'Content-Type': 'application/json'
             },
-            body: JSON.stringify(jsondata)  // 전송할 데이터
-                                            // 문자열을 json으로 변환
-        })
-    });
+            body: JSON.stringify(jsondata), // 전송할 데이터
+            // 문자열을 json으로 변환
+            redirect: 'follow'       // 서버 응답시 처리방식 지정
+        }).then((res) => {
+            if (res.redirected) location.href = res.url;
+            // 서버에서 응답해 준 url로 이동
+        }); // fetch
+    }); // addEventListener
 
 </script>
 {% endblock %}
