회원정보 입력시 폼 유효성 검사 코드 추가

--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -43,7 +43,43 @@
     let joinbtn = document.querySelector('#joinbtn');
     let joinfrm = document.joinfrm;
 
+    // 회원 가입 폼 체크 함수
+    let checkjoinfrm = (frm) => {
+        if (frm.userid.value === '') {
+            alert('아이디를 입력하세요!');
+            frm.userid.focus();
+            return false;
+        } else if (frm.passwd.value === '') {
+                alert('비밀번호 입력하세요!');
+                frm.passwd.focus();
+                return false;
+        } else if (frm.repasswd.value === '') {
+            alert('비밀번호 확인을 입력하세요!');
+            frm.repasswd.focus();
+            return false;
+
+        } else if (frm.repasswd.value !== frm.passwd.value) {
+            alert('비밀번호가 일치하지 않아요!');
+            frm.repasswd.focus();
+            return false;
+
+        } else if (frm.name.value === '') {
+            alert('이름을 확인을 입력하세요!');
+            frm.name.focus();
+            return false;
+        } else if (frm.email.value === '') {
+            alert('이메일 확인을 입력하세요!');
+            frm.email.focus();
+            return false;
+        } else {
+            return true;
+        }
+    };
+
     joinbtn.addEventListener('click', () => {
+        // 회원정보 입력 여부 검사
+        if (!checkjoinfrm(joinfrm))return
+
         // 폼에 입력된 회원 정보를 초기화함
         const formData = new FormData(joinfrm);
         console.log(formData);
