--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -4,6 +4,17 @@
 세미프로젝트 - 회원가입
 {% endblock %}
 
+{% block style %}
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+            async defer></script>
+    <script type="text/javascript">
+        var onloadCallback = () => {
+            grecaptcha.render('captcha', { 'sitekey' : '' });
+        };
+</script>
+
+{% endblock %}
+
 {% block main %}
 <main>
     <h2>회원가입</h2>
@@ -27,7 +38,13 @@
             <div class="row my-2"><label for="email" class="col-form-label col-4 text-end">이메일</label>
                 <div class="col-7">
                     <input type="email" name="email" id="email" required class="form-control"></div></div>
+
+            <div class="row my-2"><label for="captcha" class="col-form-label col-4 text-end">자동가입방지</label>
+                <div class="col-7"><div id="captcha"></div></div></div>
+
             <div class="row my-2"><label class="col-4 text-end"></label>
+
+
                 <div class="col-7">
                     <button type="button" id="joinbtn" class="btn btn-primary">입력완료</button>
                     <button type="reset" id="rstbtn" class="btn btn-danger">다시입력</button></div></div>
@@ -71,14 +88,19 @@
             alert('이메일 확인을 입력하세요!');
             frm.email.focus();
             return false;
+        } else if (grecaptcha.getResponse() === '') {
+            alert('자동가입방지를 클릭하세요 !');
+            return false;
         } else {
+            console.log('--', grecaptcha.getResponse())
             return true;
         }
     };
 
+
     joinbtn.addEventListener('click', () => {
         // 회원정보 입력 여부 검사
-        if (!checkjoinfrm(joinfrm))return
+        if (!checkjoinfrm(joinfrm)) return;
 
         // 폼에 입력된 회원 정보를 초기화함
         const formData = new FormData(joinfrm);
@@ -89,8 +111,10 @@
         formData.forEach((val, key) => {
             jsondata[key] = val;
         });
-
+        // 캡챠 응답코드 추가
+        jsondata['captcha'] = grecaptcha.getResponse();
         console.log(jsondata);
+
 
         // ajax를 이용해서 서버로 json 데이터 전송하고, 결과 받음
         fetch('/member/join', {
