게시판 목록 관련 라우트 및 서비스 추가

--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -54,50 +54,14 @@
             <th>작성일</th><th>조회</th></tr>
         </thead>
         <tbody>
-        <tr><td>1</td><td><a href="/board/view?bid=1">시간은 금이라구, 친구!</a></td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td> 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td>시간은 금이라구, 친구!</td>
-            <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
+            {% for bd in bdlist %}
+            <tr>
+                <td>{{ bd.bno }}</td>
+                <td>{{ bd.title }}</td>
+                <td>{{ }}</td>
+                <td>{{ }}</td>
+                <td>{{ }}</td>
+            </tr>
         </tbody>
     </table>
     <div class="pagnation">
