--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -57,11 +57,12 @@
             {% for bd in bdlist %}
             <tr>
                 <td>{{ bd.bno }}</td>
-                <td>{{ bd.title }}</td>
-                <td>{{ }}</td>
-                <td>{{ }}</td>
-                <td>{{ }}</td>
+                <td><a href="/board/view/{{ bd.bno }}">{{ bd.title }}</a></td>
+                <td>{{ bd.userid }}</td>
+                <td>{{ bd.regdate.strftime('%Y-%m-%d') }}</td>
+                <td>{{ bd.views }}</td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
     <div class="pagnation">
