게시판 목록 출력에 페이지네이션 적용 1

--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -6,32 +6,28 @@
 
 {% block style %}
 <style>
-    table { width: 850px; margin: 120px auto;
+    table { width: 850px; margin: 10px auto;
         border-collapse: collapse; table-layout: fixed }
-
     th, td { border: 1px solid black; padding: 5px 8px;
         text-align: center; height: 30px }
     td:nth-child(2) { text-align: left; white-space: nowrap;
         overflow: hidden; text-overflow: ellipsis }
-    thead td { border: none; text-align: right }
+    thead td { border: none; }
     thead td:first-child { text-align: left }
     thead td:last-child { text-align: right }
-    select, input { padding: 5px }
+    select, input{ padding: 5px }
     button { padding: 3.5px 5px }
 
-    .pagnation {width: 600px; margin: 0 auto }
-    div ul { list-style: none; padding: 0 }
-    div ul li { display: inline; padding: 0 15px;}
+    .pagnation { width: 600px; margin: 0 auto }
+    div > ul { list-style: none; padding: 0; }
+    div > ul li { display: inline; padding: 0 15px; }
     .cpg { color: red; font-size: 30px; font-weight: bold }
-
 </style>
 {% endblock %}
-
 
 {% block main %}
 <main>
     <h2>게시판 목록</h2>
-    <h2>게시판</h2>
     <table>
         <colgroup>
             <col style="width: 10%">
@@ -54,21 +50,33 @@
             <th>작성일</th><th>조회</th></tr>
         </thead>
         <tbody>
-            {% for bd in bdlist %}
-            <tr>
-                <td>{{ bd.bno }}</td>
-                <td><a href="/board/view/{{ bd.bno }}">{{ bd.title }}</a></td>
-                <td>{{ bd.userid }}</td>
-                <td>{{ bd.regdate.strftime('%Y-%m-%d') }}</td>
-                <td>{{ bd.views }}</td>
-            </tr>
-            {% endfor %}
+        {% for bd in bdlist %}
+        <tr>
+            <td>{{ bd.bno }}</td>
+            <td><a href="/board/view/{{ bd.bno }}">{{ bd.title }}</a></td>
+            <td>{{ bd.userid }}</td>
+            <td>{{ bd.regdate.strftime('%Y-%m-%d') }}</td>
+            <td>{{ bd.views }}</td>
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
     <div class="pagnation">
-        <ul><li>이전</li><li>1</li><li>2</li><li>3</li>
-            <li>4</li><li class="cpg">5</li><li>6</li><li>7</li>
-            <li>8</li><li>9</li><li>10</li><li>다음</li></ul>
+        <ul>
+            {% if cpg > 1 %}
+            <li><a href="/board/list/{{ cpg - 1 }}">이전</a></li>
+            {% else %}
+            <li>이전</li>
+            {% endif %}
+
+            {% for idx in range(11, 20+1) %}
+            {% if cpg != idx %}
+            <li><a href="/board/list/{{ idx }}">{{ idx }}</a></li>
+            {% else %}
+            <li class="cpg">{{ idx }}</li>
+            {% endif %}
+            {% endfor %}
+            <li><a href="/board/list/{{ cpg + 1 }}">다음</a></li></ul>
     </div>
 </main>
 {% endblock %}
