--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -69,7 +69,7 @@
             <li>이전</li>
             {% endif %}
 
-            {% for idx in range(11, 20+1) %}
+            {% for idx in range(stpgb, stpgb+10) %}
             {% if cpg != idx %}
             <li><a href="/board/list/{{ idx }}">{{ idx }}</a></li>
             {% else %}
