--- a/views/templates/gallery/write.html
+++ b/views/templates/gallery/write.html
@@ -3,6 +3,13 @@
 {% block title %}
 세미프로젝트 - 게시판 글쓰기
 {% endblock %}
+<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+        async defer></script>
+<script type="text/javascript">
+    var onloadCallback = () => {
+        grecaptcha.render('captcha', { 'sitekey' : '6LeOoCsqAAAAABOrqMk2oQDow9VGVB78rFd_d8TZ' });
+    };
+</script>
 
 {% block style %}
 <style>
@@ -10,7 +17,7 @@
         margin: 50px auto; }
     th { width: 150px; }
     tr { height: 35px }
-    tr:nth-child(3) { vertical-align: top }
+    tr:nth-child(3), tr:nth-child(4){ vertical-align: top }
     #listbtn { margin-left: 95px }
     input, textarea, button { padding: 5px }
 </style>
@@ -20,11 +27,20 @@
 {% block main %}
 <main>
     <h2>갤러리 글쓰기</h2>
-    <form name="writefrm" method="post">
-        <table cellpadding="5">
+    <form name="galleryfrm" enctype="multipart/form-data">
+        <table>
             <tr><th>제목</th><td><input type="text" name="title" id="title" required></td></tr>
             <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="snicuz" readonly></td></tr>
             <tr><th>본문</th><td><textarea name="contents" id="contents" rows="10" cols="45" required></textarea></td></tr>
+
+            <tr><th>첨부파일</th><td>
+                <div><input type="file" name="files" id="file1" required></div>
+                <div><input type="file" name="files" id="file2"></div>
+                <div><input type="file" name="files" id="file3"></div>
+            </td></tr>
+
+            <tr><th>자동가입방지</th><td><div id="captcha"></div></td></tr>
+
             <tr><td colspan="2">
                 <button type="button" id="listbtn" onclick="location.href='/gallery/list/1'">리스트로</button>
                 <button type="submit" id="writeokbtn">입력완료</button>
@@ -32,4 +48,21 @@
         </table>
     </form>
 </main>
+{% endblock %}
+
+{% block script %}
+<script>
+    let galleryfrm = document.galleryfrm;
+
+    galleryfrm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const formData =new FormData(galleryfrm);
+
+        await fetch('/gallery/write', {
+            method: 'POST',
+            body: fromData
+        });
+    });
+</script>
 {% endblock %}
