코드 오류 수정

--- a/views/templates/gallery/write.html
+++ b/views/templates/gallery/write.html
@@ -3,6 +3,8 @@
 {% block title %}
 세미프로젝트 - 게시판 글쓰기
 {% endblock %}
+
+{% block style %}
 <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
         async defer></script>
 <script type="text/javascript">
@@ -11,18 +13,16 @@
     };
 </script>
 
-{% block style %}
+</script>
 <style>
-    form { width: 450px;
-        margin: 50px auto; }
+    form { width: 450px; margin:50px auto; }
     th { width: 150px; }
     tr { height: 35px }
-    tr:nth-child(3), tr:nth-child(4){ vertical-align: top }
+    tr:nth-child(3), tr:nth-child(4) { vertical-align: top }
     #listbtn { margin-left: 95px }
     input, textarea, button { padding: 5px }
 </style>
 {% endblock %}
-
 
 {% block main %}
 <main>
@@ -30,17 +30,14 @@
     <form name="galleryfrm" enctype="multipart/form-data">
         <table>
             <tr><th>제목</th><td><input type="text" name="title" id="title" required></td></tr>
-            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="snicuz" readonly></td></tr>
+            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="zzyzzy" readonly></td></tr>
             <tr><th>본문</th><td><textarea name="contents" id="contents" rows="10" cols="45" required></textarea></td></tr>
-
             <tr><th>첨부파일</th><td>
                 <div><input type="file" name="files" id="file1" required></div>
                 <div><input type="file" name="files" id="file2"></div>
                 <div><input type="file" name="files" id="file3"></div>
             </td></tr>
-
             <tr><th>자동가입방지</th><td><div id="captcha"></div></td></tr>
-
             <tr><td colspan="2">
                 <button type="button" id="listbtn" onclick="location.href='/gallery/list/1'">리스트로</button>
                 <button type="submit" id="writeokbtn">입력완료</button>
@@ -57,11 +54,11 @@
     galleryfrm.addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        const formData =new FormData(galleryfrm);
+        const formData = new FormData(galleryfrm);
 
         await fetch('/gallery/write', {
             method: 'POST',
-            body: fromData
+            body: formData
         });
     });
 </script>
