--- a/views/templates/gallery/view.html
+++ b/views/templates/gallery/view.html
@@ -19,18 +19,17 @@
 <main>
     <h2>갤러리 본문보기</h2>
     <table>
-        {% for g in gallery %}
+        {% for g, ga in galleries %}
         <tr><th>제목</th><td>{{ g.title }}</td></tr>
         <tr><th>작성자</th><td>{{ g.userid }}</td></tr>
         <tr><th>작성일</th><td>{{ g.regdate }}</td></tr>
         <tr><th>본문</th><td>{{ g.contents }}
-            {% endfor %}
-
-            {% for ga in galattach %}
-            <img src="http://127.0.0.1/cdn/img/{{ ga.fname }}"
+            {% for a in ga %}
+            <img src="http://127.0.0.1/cdn/img/{{ a.fname }}"
                  class="img-fluid">
             {% endfor %}
         </td></tr>
+        {% endfor %}
         <tr><td colspan="2">
             <button type="button" id="listbtn" onclick="location.href='/gallery/list/1'">리스트로</button>
             <button type="button" id="mdfybtn" onclick="location.href='/gallery/modify'">수정하기</button>
