--- a/views/templates/gallery/view.html
+++ b/views/templates/gallery/view.html
@@ -1,12 +1,12 @@
 {% extends 'include/base.html' %}
 
 {% block title %}
-세미프로젝트 - 게시판 본문 보기
+세미프로젝트 - 갤러리 본문보기
 {% endblock %}
 
 {% block style %}
 <style>
-    table { border: 1px solid red; width: 650px; margin: 0 auto; }
+    table { width: 650px; margin: 0 auto; }
     tr { height: 40px }
     th { width: 100px }
     tr:nth-child(4) { vertical-align: top }
@@ -14,22 +14,19 @@
 </style>
 {% endblock %}
 
-
 {% block main %}
 <main>
     <h2>갤러리 본문보기</h2>
     <table>
-        {% for g, ga in galleries %}
-        <tr><th>제목</th><td>{{ g.title }}</td></tr>
-        <tr><th>작성자</th><td>{{ g.userid }}</td></tr>
-        <tr><th>작성일</th><td>{{ g.regdate }}</td></tr>
-        <tr><th>본문</th><td>{{ g.contents }}
-            {% for a in ga %}
-            <img src="http://127.0.0.1/cdn/img/{{ a.fname }}"
+        <tr><th>제목</th><td>{{ gallery.title }}</td></tr>
+        <tr><th>작성자</th><td>{{ gallery.userid }}</td></tr>
+        <tr><th>작성일</th><td>{{ gallery.regdate }}</td></tr>
+        <tr><th>본문</th><td>{{ gallery.contents }}
+            {% for ga in gallery.attachs %}
+            <img src="http://127.0.0.1/cdn/img/{{ ga.fname }}"
                  class="img-fluid">
             {% endfor %}
         </td></tr>
-        {% endfor %}
         <tr><td colspan="2">
             <button type="button" id="listbtn" onclick="location.href='/gallery/list/1'">리스트로</button>
             <button type="button" id="mdfybtn" onclick="location.href='/gallery/modify'">수정하기</button>
