게시판 로그인 하지 않으면 글쓰기 금지

--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -18,7 +18,7 @@
     select, input{ padding: 5px }
     button { padding: 3.5px 5px }
 
-    .pagnation { width: 600px; margin: 0 auto }
+    .pagnation { width: 685px; margin: 0 auto }
     div > ul { list-style: none; padding: 0; }
     div > ul li { display: inline; padding: 0 15px; }
     .cpg { color: red; font-size: 30px; font-weight: bold }
@@ -45,7 +45,11 @@
         </select>
             <input type="text" name="search" id="search">
             <button type="button" id="findbtn">검색하기</button></td>
-            <td colspan="2"><button type="button" id="writebtn" onclick="location.href='/board/write'">글쓰기</button></td></tr>
+            <td colspan="2">
+                {% if 'logined_uid' in request.session %}
+                <button type="button" id="writebtn">글쓰기</button>
+                {% endif %}
+            </td></tr>
         <tr><th>번호</th><th>제목</th><th>작성자</th>
             <th>작성일</th><th>조회</th></tr>
         </thead>
@@ -76,7 +80,18 @@
             <li class="cpg">{{ idx }}</li>
             {% endif %}
             {% endfor %}
+
             <li><a href="/board/list/{{ cpg + 1 }}">다음</a></li></ul>
     </div>
 </main>
+{% endblock %}
+
+{% block script %}
+<script>
+    let writebtn = document.querySelector('#writebtn');
+
+    writebtn.addEventListener('click', () => {
+        location.href = '/board/write';
+    });
+</script>
 {% endblock %}
