검색 버튼 이벤트 기능 구현

--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -89,9 +89,27 @@
 {% block script %}
 <script>
     let writebtn = document.querySelector('#writebtn');
+    let findbtn = document.querySelector('#findbtn');
 
-    writebtn.addEventListener('click', () => {
+    // optional chaining : 특정 객체의 속성에 접근시
+    // 해당 객체가 null 이거나 undefined 일 경우, 보통 에러가 발생됨
+    // 이럴 경우, 옵셔널 체이닝을 이용하면 에러를 발생시키지 않음
+    // 사용법 : 객체명?.속성명
+    writebtn?.addEventListener('click', () => {
         location.href = '/board/write';
     });
+
+
+    findbtn.addEventListener('click', () => {
+        let ftype = document.querySelector('#findtype').value;
+        let fkey = document.querySelector('#search').value;
+
+        // 검색시 사용할 api : /board/list/검색종류/검색내용/1
+        let params = `/${ftype}/${fkey}/1`;
+        let findurl = '/board/list' + params;
+
+        location.href = findurl;
+    });
+
 </script>
 {% endblock %}
