--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -9,7 +9,7 @@
             async defer></script>
     <script type="text/javascript">
         var onloadCallback = () => {
-            grecaptcha.render('captcha', { 'sitekey' : '' });
+            grecaptcha.render('captcha', { 'sitekey' : '6LeOoCsqAAAAABOrqMk2oQDow9VGVB78rFd_d8TZ' });
         };
 </script>
 
@@ -17,13 +17,14 @@
 
 {% block main %}
 <main>
-    <h2>회원가입</h2>
+    <h2><i class="bi bi-people-fill"></i>회원가입</h2>
     <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
         <form name="joinfrm" method="post" class="col-5">
             <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
                 <div class="col-7">
                     <input type="text" name="userid" id="userid"
-                           minlength="6" maxlength="18" required class="form-control"></div></div>
+                           minlength
+                                   ="6" maxlength="18" required class="form-control"></div></div>
             <div class="row my-2"><label for="passwd" class="col-form-label col-4 text-end">비밀번호</label>
                 <div class="col-7">
                     <input type="text" name="passwd" id="passwd"
@@ -46,8 +47,8 @@
 
 
                 <div class="col-7">
-                    <button type="button" id="joinbtn" class="btn btn-primary">입력완료</button>
-                    <button type="reset" id="rstbtn" class="btn btn-danger">다시입력</button></div></div>
+                    <button type="button" id="joinbtn" class="btn btn-primary"><i class="bi bi-check"></i>입력완료</button>
+                    <button type="reset" id="rstbtn" class="btn btn-danger"><i class="bi bi-arrow-90deg-left"></i>다시입력</button></div></div>
         </form>
     </div>
 </main>
