게시물 본문 보기시 댓글 출력 기능 구현1

--- a/views/templates/board/view.html
+++ b/views/templates/board/view.html
@@ -40,25 +40,17 @@
     <h3 class="offset-2"><i class="bi bi-chat-dots-fill"></i> 나도 한마디</h3>
 
     <table class="offset-3" id="comtlist">
-        <tr><td><h4>abc123</h4></td>
-            <td><div class="cmtbg">2024.12.01
+        {% for rp in boards.replys %}
+        <tr><td><h4>{{ rp.userid }}</h4></td>
+            <td><div class="cmtbg">{{ rp.regdate }}
                 <span class="pushend"><a href="#">[추가]</a></span></div>
-                <p>댓글댓글댓글댓글</p></td></tr>
+                <p>{{ rp.reply }}</p></td></tr>
 
-        <tr><td></td> <td><div class="rpybg">
-            <span>987xyz</span>
-            <span class="pushend">2024.11.01</span></div>
-            <p>대댓글대댓글대댓글대댓글</p></td></tr>
-
-        <tr><td><h4>987xyz</h4></td>
-            <td><div class="cmtbg">2024.12.01
-                <span class="pushend"><a href="#">[추가]</a></span></div>
-                <p>댓글댓글댓글댓글</p></td></tr>
-
-        <tr><td><h4>zzyzzy</h4></td>
-            <td><div class="cmtbg">2024.12.01
-                <span class="pushend"><a href="#">[추가]</a></span></div>
-                <p>댓글댓글댓글댓글</p></td></tr>
+        <!--        <tr><td></td> <td><div class="rpybg">-->
+        <!--                <span>987xyz</span>-->
+        <!--                <span class="pushend">2024.11.01</span></div>-->
+        <!--                <p>대댓글대댓글대댓글대댓글</p></td></tr>-->
+        {% endfor %}
     </table><!-- 댓글목록 -->
 
     <div class="row offset-2 col-8 pushbtm">
