총 페이지 수에 따른 페이지네이션 출력 마지막 페이지 다음 버튼 표시 여부 지정

--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -74,14 +74,21 @@
             {% endif %}
 
             {% for idx in range(stpgb, stpgb+10) %}
+            {% if idx <= allpage %} {# idx가 allpage보다 같거나 작으면 페이지네이션 출력 #}
             {% if cpg != idx %}
             <li><a href="/board/list/{{ idx }}">{{ idx }}</a></li>
             {% else %}
             <li class="cpg">{{ idx }}</li>
             {% endif %}
+            {% endif %}
             {% endfor %}
 
+            {% if cpg < allpage %}  {# 현재 페이지가 allpage보다 작으면 링크 다음 출력 #}
             <li><a href="/board/list/{{ cpg + 1 }}">다음</a></li></ul>
+            {% else %}
+            <li>다음</li>
+            {% endif %}
+        </ul>
     </div>
 </main>
 {% endblock %}
