터미너스에서 실행 할 파일 오류 수정

--- a/views/templates/pds/list.html
+++ b/views/templates/pds/list.html
@@ -27,7 +27,7 @@
 
 {% block main %}
 <main>
-    <h2>자료실 본문보기</h2>
+    <h2>자료실</h2>
     <table>
         <colgroup>
             <col style="width: 10%">
@@ -52,7 +52,7 @@
         <tbody>
         <tr><td>1</td><td><a href="/pds/view/1">시간은 금이라구, 친구!</a></td>
             <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
-        <tr><td>1</td><td> 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구! 시간은 금이라구, 친구!</td>
+        <tr><td>1</td><td>시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!시간은 금이라구, 친구!</td>
             <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
         <tr><td>1</td><td>시간은 금이라구, 친구!</td>
             <td>zzyzzy</td><td>2024.07.30</td><td>123</td></tr>
