--- a/views/templates/gallery/list.html
+++ b/views/templates/gallery/list.html
@@ -1,7 +1,7 @@
 {% extends 'include/base.html' %}
 
 {% block title %}
-세미프로젝트 - 게시판 목록
+세미프로젝트 - 갤러리 목록
 {% endblock %}
 
 {% block style %}
@@ -27,31 +27,46 @@
 
 {% block main %}
 <main>
-    <h2>갤러리 본문보기</h2>
+    <h2>갤러리</h2>
     <table>
+        <colgroup>
+            <col style="width: 10%">
+            <col>
+            <col style="width: 15%">
+            <col style="width: 15%">
+            <col style="width: 10%">
+        </colgroup>
         <thead>
-        <div class="row" style="width: 888px; margin: 0 auto;">
-            {% for ga in galist %}
-            <div class="col-10 card m-1" style="width: 18rem">
-                <a href="/gallery/view/{{ ga.gno }}">
-                    <img src="http://127.0.0.1/cdn/img/{{ ga.fname }}"
-                         class="card-img-top" alt="..."></a><!-- 이미지 -->
-                <div class="card-body">
-                    <h5 class="card-title">제목</h5>
-                    <div><span>{{ ga.userid }}</span>
-                        <span>{{ ga.regdate }}</span></div>
-                    <div>
-                        <span><i class="bi bi-eye"></i> {{ ga.views }}</span>
-                    </div>
+        <tr><td colspan="3"><select name="findtype" id="findtype">
+            <option value="title">제 목</option>
+            <option value="userid">작성자</option>
+            <option value="contents">본 문</option>
+            <option value="titcont">제목+본문</option>
+        </select>
+            <input type="text" name="search" id="search">
+            <button type="button" id="findbtn">검색하기</button></td>
+            <td colspan="2"><button type="button" id="writebtn" onclick="location.href='/gallery/write'">글쓰기</button></td></tr>
+        </thead>
+    </table>
+
+    <div class="row" style="width: 888px; margin: 0 auto;">
+        {% for ga in galist %}
+        <div class="col-10 card m-1" style="width: 18rem">
+            <a href="/gallery/view/{{ ga.gno }}">
+                <img src="http://127.0.0.1/cdn/img/{{ ga.fname }}"
+                     class="card-img-top" alt="..."></a><!-- 이미지 -->
+            <div class="card-body">
+                <h5 class="card-title">{{ ga.title }}</h5>
+                <div><span>{{ ga.userid }}</span>
+                    <span>{{ ga.regdate }}</span></div>
+                <div>
+                    <span><i class="bi bi-eye"></i> {{ ga.views }}</span>
                 </div>
             </div>
-            {% endfor %}
         </div>
-        </thead>
-        <tbody>
+        {% endfor %}
+    </div>
 
-        </tbody>
-    </table>
     <div class="pagnation">
         <ul><li>이전</li><li>1</li><li>2</li><li>3</li>
             <li>4</li><li class="cpg">5</li><li>6</li><li>7</li>
