--- a/views/templates/gallery/write.html
+++ b/views/templates/gallery/write.html
@@ -1,7 +1,7 @@
 {% extends 'include/base.html' %}
 
 {% block title %}
-세미프로젝트 - 게시판 글쓰기
+세미프로젝트 - 갤러리 글쓰기
 {% endblock %}
 
 {% block style %}
@@ -9,10 +9,8 @@
         async defer></script>
 <script type="text/javascript">
     var onloadCallback = () => {
-        grecaptcha.render('captcha', { 'sitekey' : '6LeOoCsqAAAAABOrqMk2oQDow9VGVB78rFd_d8TZ' });
+        grecaptcha.render('captcha', { 'sitekey' : '6LcR1HApAAAAACVzBPajTrarqUb1bPux9zUWlvzw' });
     };
-</script>
-
 </script>
 <style>
     form { width: 450px; margin:50px auto; }
@@ -54,15 +52,16 @@
     galleryfrm.addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        if (grecaptcha.getResponse() == '') {
+        if (grecaptcha.getResponse() === '') {
             alert('자동가입방지를 클릭하세요!');
-        return;
-    }
+            return;
+        }
 
         const formData = new FormData(galleryfrm);
         // multipart 형식으로 전송해야 하기 때문에
         // formData.append(키, 값) 형태로 추가
         formData.append('captcha', grecaptcha.getResponse());
+
         await fetch('/gallery/write', {
             method: 'POST',
             body: formData,
