--- a/views/templates/pds/write.html
+++ b/views/templates/pds/write.html
@@ -6,8 +6,7 @@
 
 {% block style %}
 <style>
-    form { width: 450px;
-        margin: 50px auto; }
+    form { width: 450px; margin:50px auto; }
     th { width: 150px; }
     tr { height: 35px }
     tr:nth-child(3) { vertical-align: top }
@@ -16,14 +15,13 @@
 </style>
 {% endblock %}
 
-
 {% block main %}
 <main>
     <h2>자료실 글쓰기</h2>
     <form name="pdsfrm" enctype="multipart/form-data">
         <table>
             <tr><th>제목</th><td><input type="text" name="title" id="title" required></td></tr>
-            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="snicuz" readonly></td></tr>
+            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="zzyzzy" readonly></td></tr>
             <tr><th>본문</th><td><textarea name="contents" id="contents" rows="10" cols="45" required></textarea></td></tr>
             <tr><td colspan="2">
                 <button type="button" id="listbtn" onclick="location.href='/pds/list/1'">리스트로</button>
